# ungula-hal

./: API.md  README.md  library.properties
src/: ungula_hal.h
src/hal/adc/: adc_manager.h
src/hal/gpio/: gpio_access.h  gpio_types.h
src/hal/i2c/: i2c_master.h
src/hal/spi/: spi_master.h
src/hal/uart/: uart.h
src/ungula/: hal.h
src/ungula/hal/adc/: adc_manager.h
src/ungula/hal/can/: can.h  can_frame.h  i_can.h
src/ungula/hal/console/: console.cpp  console.h
src/ungula/hal/core/: compiler_attrs.h
src/ungula/hal/gpio/: gpio.h  gpio_access.h  gpio_types.h
src/ungula/hal/i2c/: i2c_master.h
src/ungula/hal/multiplexer/: i_multiplexer.cpp  i_multiplexer.h
src/ungula/hal/multiplexer/drivers/: multiplexer_fake.h  multiplexer_tca9548.cpp  multiplexer_tca9548.h
src/ungula/hal/pwm_input/: i_pwm_input.cpp  i_pwm_input.h
src/ungula/hal/pwm_input/drivers/: pwm_input.h  pwm_input_fake.h
src/ungula/hal/quadrature/: i_decoder.cpp  i_decoder.h
src/ungula/hal/quadrature/drivers/: decoder.h  decoder_fake.h
src/ungula/hal/spi/: spi_master.h
src/ungula/hal/sync/: critical_section.h
src/ungula/hal/timer/: i_hwtimer.h
src/ungula/hal/timer/drivers/: hwtimer.h  hwtimer_fake.h
src/ungula/hal/uart/: uart.h
tests/: 2_run.sh  CMakeLists.txt  test_adc_manager.cpp  test_can.cpp  test_gpio_access.cpp  test_hwtimer.cpp  test_i2c_master.cpp  test_multiplexer.cpp  test_pwm_input.cpp  test_quadrature.cpp  test_spi_master.cpp  test_sync.cpp  test_uart.cpp
tests/loopback/: README.md
tests/loopback/i2c_scan/: i2c_scan.ino
tests/loopback/spi_loopback/: spi_loopback.ino
tests/loopback/uart_loopback/: uart_loopback.ino
